# miningRoom

./: README.md  sol
docs/: mining-room-spec.md
onchain/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
onchain/programs/mining_room/: Cargo.toml
onchain/programs/mining_room/src/: lib.rs
onchain/scripts/: run-anchor.sh
onchain/tests/: mining-room.ts
