[workspace]
resolver = "2"
members = [
    "programs/mining_room",
]

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = "1.18.15"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token", "idl-build"] }

[profile.release]
overflow-checks = true

[patch.crates-io]
anchor-syn = { path = "vendor/anchor-syn" }

